--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
