--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.16",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.7.1",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
