--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "recharts": "^2.10.3",
     "styled-components": "^6.1.3"
   },
   "devDependencies": {
