--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "recharts": "^2.10.3",
-    "styled-components": "^6.1.3"
+    "styled-components": "^6.1.3",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
